fix the layout on small screen, change the photo size, consistency and words adjustment

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -29,7 +29,9 @@
 
 
 
-
+.body {
+  font-family: 'Avenir Next',Avenir,'Helvetica Neue',Helvetica,'Lantinghei SC','Hiragino Sans GB',sans-serif;
+}
 
 
 
@@ -87,7 +89,7 @@
 }
 
 .sidebar-nav li a {
-  
+
     text-decoration: none;
     color: #999999;
 }
